tests/ui/closures/rpitit-lifetime-keysmash.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/rpitit-lifetime-keysmash.rs:8:5
   |
LL |   fn closure_bounded<'a, T>(
   |                      -- the parameter type `T` must be valid for the lifetime `'a` as defined here...
...
LL | /     move |x| {
LL | |         *count += 1;
LL | |     }
   | |_____^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn closure_bounded<'a, T: 'a>(
   |                         ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0309`.
